add print button to logic model

--- a/phtc/templates/logic_model/subtemplates/table.html
+++ b/phtc/templates/logic_model/subtemplates/table.html
@@ -16,6 +16,7 @@
     <div class="previous_phase btn btn-info"><i class="icon-arrow-left icon-white"></i> Back a step</div>
     <div class="wipe-table-button btn btn-info"><i class="icon-trash icon-white"></i> Clear table</div>
     <div class="change_scenario btn btn-info"><i class="icon-refresh icon-white"></i> Switch scenario</div>
+    <div class="print_scenario btn btn-info"><i class="icon-print icon-white"></i> Print scenario</div>
     <div class ="show_expert_logic_model_link_div btn btn-info">
         <i class="icon-file icon-white"></i> <a target="_blank" href="/_logic_model/media/pdf/expert_logic_model.pdf" class="show_expert_logic_model_link">Show expert logic model</a>
     </div>
