http -> https to fix mixed content errors

--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -29,7 +29,7 @@ shieldbrowser({"Chrome":13,"Firefox":6,"MSIE":9,"Safari":5});
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
-  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
 	{% block feeds %}{% endblock %}
@@ -144,7 +144,7 @@ shieldbrowser({"Chrome":13,"Firefox":6,"MSIE":9,"Safari":5});
 </div><!-- container -->
 
 
-<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+<script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
 
 {% block js %}{% endblock %}
 {% compress js %}
