--- a/phtc/templates/flatpages/help.html
+++ b/phtc/templates/flatpages/help.html
@@ -29,7 +29,7 @@ shieldbrowser({"Chrome":13,"Firefox":6,"MSIE":9,"Safari":5});
 
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
-  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
 	{% block feeds %}{% endblock %}
@@ -150,7 +150,7 @@ the Health Resources and Services Administration, U.S. Department of Health and 
 </div><!-- container -->
 
 
-<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+<script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
 
 {% compress js %}
 <script src="{{STATIC_URL}}bootstrap/js/bootstrap.js"></script>
